# learn-from-agg-obs

./: .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  justfile  meson.build  pyproject.toml
.github/: pull_request_template.md
docs/: conf.py  index.md
docs/concept/: explanations.md
docs/how_to/: index.md
scripts/: get_version.py
src/aolearn/: __init__.py  hello_world.py
src/learn_from_agg_obs/: __init__.py
