[project]
name = "learn-from-agg-obs"
version = "0.1.0"
description = "A set of algorithms to learn individual-level predictors from group-level signals"
readme = "README.md"
authors = [{ name = "bastienqb", email = "random@gmail" }]
requires-python = ">=3.9"
dependencies = []

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "Q",    # flake8-quotes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "D",    # pydocstyle
  "D413", # end-of-docstring line
  "T201", # print
  "C4",   # flake8-comprehensions
  "RUF",  # Ruff-specific rules
]
ignore = ["D107"]

[tool.ruff.lint.per-file-ignores]
# Tests can use relative imports, ignore missing docstrings,
# compare to empty string
"**/tests/**" = ["D100", "D101", "D102", "D103"]
# Ignore import violations in all __init__.py files
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["aolearn"]

[tool.codespell]
builtin = "clear,rare"
